# amplifier-module-hooks-cxdb-events

./: .gitignore  pyproject.toml
amplifier_module_hooks_cxdb_events/: __init__.py  buffer.py  conversation_bundle.json  hook.py  protocol.py  schema.py  turns.py  types.py
behaviors/: cxdb-events-local.yaml  cxdb-events.yaml
tests/: conftest.py  test_buffer.py  test_hook.py  test_hook_cxdb.py  test_hook_synthetic.py  test_integration.py  test_mount.py  test_protocol.py  test_scaffold.py  test_schema.py  test_turns.py  test_types.py
