[project]
name = "amplifier-module-hooks-cxdb-events"
version = "0.1.0"
description = "Amplifier hook module that captures lifecycle events and stores them in CXDB"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
    "msgpack>=1.0",
    "blake3>=0.4",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires running CXDB server)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
