[project]
name = "amplifier-module-hooks-cxdb-events"
version = "0.1.0"
description = "Amplifier hook module that captures lifecycle events and stores them in CXDB"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "msgpack>=1.0",
    "blake3>=0.4",
    "httpx>=0.24",
]

[project.entry-points."amplifier.modules"]
hooks-cxdb-events = "amplifier_module_hooks_cxdb_events:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", rev = "main" }

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_cxdb_events"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
markers = [
    "integration: marks tests as integration tests (requires running CXDB server)",
]

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
]
